--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "server": "nodemon server/index.js",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint .",
-    "render-build": "npm run build",
-    "render-start" : "node server/index.js"
+    "lint": "eslint ."
   },
   
   "dependencies": {
