--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "server": "nodemon server/index.js",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start": "node server/index.js",
+    "build:client": "vite build",
+    "install:all": "npm install"
   },
   
   "dependencies": {
